--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-mdx-blog-starter-project",
-  "description": "Gatsby MDX Blog Starter Project",
+  "name": "matiashernandez.deev",
+  "description": "Matias personal website",
   "version": "1.0.0",
-  "author": "Robin Wieruch <hello@rwieruch.com> (https://www.robinwieruch.de/)",
-  "repository": "https://github.com/rwieruch/gatsby-mdx-blog-starter-project",
+  "author": "Matias Hernandez A. <hello@matiashernandez.dev> (https://www.matiashernandez.dev)",
+  "repository": "https://github.com/matiasfha/matiashernandez.dev",
   "dependencies": {
     "@mdx-js/mdx": "^1.6.0",
     "@mdx-js/react": "^1.6.0",
@@ -13,14 +13,11 @@
     "gatsby-plugin-manifest": "^2.4.1",
     "gatsby-plugin-mdx": "^1.2.4",
     "gatsby-plugin-offline": "^3.2.0",
-    "gatsby-plugin-react-helmet": "^3.3.0",
-    "gatsby-plugin-sharp": "^2.6.0",
     "gatsby-plugin-styled-components": "^3.3.0",
     "gatsby-remark-copy-linked-files": "^2.3.1",
     "gatsby-remark-images": "^3.3.0",
     "gatsby-remark-prismjs": "^3.5.0",
     "gatsby-source-filesystem": "^2.3.0",
-    "gatsby-transformer-sharp": "^2.5.0",
     "prismjs": "^1.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -28,7 +25,28 @@
     "react-youtube": "^7.11.2",
     "styled-components": "^5.1.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@emotion/core": "10.0.28",
+    "@emotion/styled": "10.0.27",
+    "eslint-config-kentcdodds": "14.14.1",
+    "eslint-plugin-cypress": "2.11.1",
+    "eslint-plugin-jest": "23.18.0",
+    "formik": "2.1.4",
+    "gatsby-plugin-catch-links": "2.3.10",
+    "gatsby-plugin-emotion": "4.3.9",
+    "gatsby-plugin-react-helmet": "3.3.9",
+    "gatsby-plugin-root-import": "2.0.5",
+    "gatsby-plugin-sharp": "2.6.18",
+    "gatsby-plugin-twitter": "2.3.9",
+    "gatsby-plugin-workerize-loader": "1.5.0",
+    "gatsby-transformer-sharp": "2.5.10",
+    "husky": "4.2.5",
+    "jest": "26.1.0",
+    "lint-staged": "10.2.11",
+    "prettier": "2.0.5",
+    "react-markdown": "4.3.1",
+    "yup": "0.29.1"
+  },
   "keywords": [
     "gatsby"
   ],
@@ -36,6 +54,19 @@
   "main": "n/a",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop"
-  }
+    "develop": "gatsby develop",
+    "setup": "npm install && npm run validate",
+    "validate": "npm run build",
+    "lint": "estlint .",
+    "format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|less|scss|ts|tsx|graphql|md|mdx)\""
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "browserslist": [
+    ">1%",
+    "not dead"
+  ]
 }
