--- a/package.json
+++ b/package.json
@@ -8,22 +8,28 @@
     "@mdx-js/mdx": "^1.6.0",
     "@mdx-js/react": "^1.6.0",
     "core-js": "^3.6.5",
+    "dotenv": "8.2.0",
     "gatsby": "^2.21.7",
-    "gatsby-image": "^2.4.0",
+    "gatsby-image": "2.4.12",
     "gatsby-plugin-manifest": "^2.4.1",
     "gatsby-plugin-mdx": "^1.2.4",
     "gatsby-plugin-offline": "^3.2.0",
     "gatsby-plugin-styled-components": "^3.3.0",
+    "gatsby-plugin-typography": "2.5.10",
     "gatsby-remark-copy-linked-files": "^2.3.1",
     "gatsby-remark-images": "^3.3.0",
     "gatsby-remark-prismjs": "^3.5.0",
+    "gatsby-source-buzzsprout-api": "1.0.1",
     "gatsby-source-filesystem": "^2.3.0",
+    "gatsby-source-rss-feed": "github:matiasfha/gatsby-source-rss-feed#semver:1.2.1",
     "prismjs": "^1.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
+    "react-typography": "0.16.19",
     "react-youtube": "^7.11.2",
-    "styled-components": "^5.1.0"
+    "styled-components": "^5.1.0",
+    "typography": "0.16.19"
   },
   "devDependencies": {
     "@emotion/core": "10.0.28",
