--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby-image": "2.4.12",
     "gatsby-plugin-manifest": "^2.4.1",
     "gatsby-plugin-mdx": "^1.2.4",
+    "gatsby-plugin-netlify-cms": "4.3.11",
     "gatsby-plugin-offline": "^3.2.0",
     "gatsby-plugin-styled-components": "^3.3.0",
     "gatsby-plugin-typography": "2.5.10",
@@ -23,7 +24,9 @@
     "gatsby-source-buzzsprout-api": "1.0.1",
     "gatsby-source-filesystem": "^2.3.0",
     "gatsby-source-rss-feed": "github:matiasfha/gatsby-source-rss-feed#semver:1.2.1",
+    "netlify-cms-app": "2.12.17",
     "prismjs": "^1.20.0",
+    "prop-types": "15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
