--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "husky": "4.2.5",
     "jest": "26.1.0",
     "lint-staged": "10.2.11",
+    "netlify-shortener": "2.3.0",
     "prettier": "2.0.5",
     "react-markdown": "4.3.1",
     "typescript": "3.9.6",
@@ -71,7 +72,8 @@
     "setup": "npm install && npm run validate",
     "validate": "npm run build",
     "lint": "estlint .",
-    "format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|less|scss|ts|tsx|graphql|md|mdx)\""
+    "format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|less|scss|ts|tsx|graphql|md|mdx)\"",
+    "shorten": "netlify-shortener"
   },
   "husky": {
     "hooks": {
