--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -3,38 +3,34 @@ new_page_extension: mdx
 auto_deploy: false
 admin_path: ''
 webhook_url: 
-sections: 
+sections:
+- type: heading
+  label: Content
+- type: directory
+  path: content/posts
+  label: Blog Posts
+  create: documents
+  match: "**/*"
+  new_doc_ext: md
+  templates:
+  - blog-post
+- type: document
+  path: content/data/info.json
+  label: Info Page
+- type: heading
+  label: General Config
+- type: document
+  path: config.json
+  label: Site Info
 upload_dir: content/images
 public_path: "/content/images"
 front_matter_path: ''
 use_front_matter_path: false
 file_template: ":filename:"
-sections:
-- type: heading
-label: Content
-- type: directory
-path: content/posts
-label: Blog Posts
-create: documents
-match: "**/*"
-new_doc_ext: md
-templates:
-- blog-post
-- type: document
-path: content/data/authors.yaml
-label: Author List
-- type: document
-path: content/data/info.json
-label: Info Page
-- type: heading
-label: General Config
-- type: document
-path: config.json
-label: Site Info
 build:
   preview_output_directory: public
-  install_dependencies_command: npm install
-  preview_docker_image: forestryio/node:12
+  install_dependencies_command: yarn install
+  preview_docker_image: node:10
   mount_path: "/srv"
-  working_dir: "/srv"
-  instant_preview_command: npm run develop
+  working_dir: "/srv/public"
+  instant_preview_command: npm run forestry-preview
