--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-typography": "0.16.19",
     "react-youtube": "^7.11.2",
     "styled-components": "^5.1.0",
-    "typography": "0.16.19"
+    "typography": "0.16.19",
+    "url": "0.11.0"
   },
   "devDependencies": {
     "@emotion/core": "10.0.28",
