--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-styled-components": "^3.3.0",
     "gatsby-plugin-typography": "2.5.10",
     "gatsby-remark-copy-linked-files": "^2.3.1",
+    "gatsby-remark-embedder": "2.1.2",
     "gatsby-remark-images": "^3.3.0",
     "gatsby-remark-prismjs": "^3.5.0",
     "gatsby-remark-reading-time": "1.1.0",
