--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
+    "react-share": "4.2.1",
     "react-typography": "0.16.19",
     "react-youtube": "^7.11.2",
     "styled-components": "^5.1.0",
