--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "8.2.0",
     "gatsby": "^2.21.7",
     "gatsby-image": "2.4.12",
+    "gatsby-plugin-google-analytics": "2.3.12",
     "gatsby-plugin-manifest": "^2.4.1",
     "gatsby-plugin-mdx": "^1.2.4",
     "gatsby-plugin-netlify-cms": "4.3.11",
