--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "matiashernandez.deev",
+  "name": "matiashernandez.dev",
   "description": "Matias personal website",
   "version": "1.0.0",
   "author": "Matias Hernandez A. <hello@matiashernandez.dev> (https://www.matiashernandez.dev)",
@@ -7,6 +7,7 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.6.0",
     "@mdx-js/react": "^1.6.0",
+    "@pauliescanlon/gatsby-mdx-embed": "0.0.23",
     "core-js": "^3.6.5",
     "dotenv": "8.2.0",
     "gatsby": "^2.21.7",
@@ -25,8 +26,6 @@
     "gatsby-remark-reading-time": "1.1.0",
     "gatsby-source-buzzsprout-api": "1.0.1",
     "gatsby-source-filesystem": "^2.3.0",
-    "gatsby-source-rss-feed": "github:matiasfha/gatsby-source-rss-feed#semver:1.2.1",
-    "netlify-cms-app": "2.12.17",
     "prismjs": "^1.20.0",
     "prop-types": "15.7.2",
     "react": "^16.13.1",
