--- a/package.json
+++ b/package.json
@@ -42,10 +42,12 @@
     "url": "0.11.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-optional-chaining": "7.11.0",
     "@emotion/core": "10.0.28",
     "@emotion/styled": "10.0.27",
     "@typescript-eslint/eslint-plugin": "3.6.1",
     "@typescript-eslint/parser": "3.7.1",
+    "babel-preset-gatsby": "0.5.5",
     "eslint-config-kentcdodds": "14.14.1",
     "eslint-plugin-cypress": "2.11.1",
     "eslint-plugin-jest": "23.18.0",
