--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-mdx": "^1.2.4",
     "gatsby-plugin-netlify-cms": "4.3.11",
     "gatsby-plugin-offline": "^3.2.0",
+    "gatsby-plugin-robots-txt": "1.5.1",
     "gatsby-plugin-social-cards": "0.5.13",
     "gatsby-plugin-styled-components": "^3.3.0",
     "gatsby-plugin-typography": "2.5.10",
