--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "noImplicitAny": true,
     "module": "commonjs",
     "target": "es6",
-    "jsx": "react"
+    "jsx": "react",
+    "esModuleInterop": true
   },
   "include": ["**/**.tsx", "**/**.ts"],
   "exclude": ["node_modules", "**/**.js"]
