--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 CONVERTKIT_SIGNUP_FORM=da21cefb3f
 BUZZSPROUT_TOKEN=c87c35a37bc06dc59b1226472c694fa4
 GOOGLE_ANALYTICS_ID=UA-45569809-2
+NETFLIFY_ENV=local
